Almost finished feature engineering

--- a/Code/EDA.ipynb
+++ b/Code/EDA.ipynb
@@ -64,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -16422,6 +16424,15 @@
    "source": [
     "import math\n",
     "population['reviews_per_month'] = population['reviews_per_month'].apply(lambda x: 0 if math.isnan(x) else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "population.to_csv(csv_output)"
    ]
   },
   {
