Added target column for NLP table

--- a/Code/1b_EDA.ipynb
+++ b/Code/1b_EDA.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/pkim/Dropbox/Projects/SpringAccel\n"
+      "/Users/pkim/Dropbox/Projects/Airbnb\n"
      ]
     }
    ],
@@ -28,15 +28,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/pkim/Dropbox/Projects/SpringAccel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Imports\n",
     "import pickle\n",
@@ -3150,7 +3142,7 @@
    "source": [
     "text_cols = ['name','summary','space','description',\n",
     "             'neighborhood_overview','notes','transit',\n",
-    "             'access','interaction','house_rules','host_about'\n",
+    "             'access','interaction','house_rules','host_about','isPlus'\n",
     "            ]\n",
     "id_cols = ['id','host_id','host_name']\n",
     "nlp_dataset = population[text_cols + id_cols]"
@@ -3193,6 +3185,7 @@
        "      <th>interaction</th>\n",
        "      <th>house_rules</th>\n",
        "      <th>host_about</th>\n",
+       "      <th>isPlus</th>\n",
        "      <th>id</th>\n",
        "      <th>host_id</th>\n",
        "      <th>host_name</th>\n",
@@ -3212,6 +3205,7 @@
        "      <td>I am friendly and available to help you with y...</td>\n",
        "      <td>I just have one rule. The Golden Rule Do unto ...</td>\n",
        "      <td>Writer.\\r\\nLiterary Manager.\\r\\nPhotographer.\\...</td>\n",
+       "      <td>0</td>\n",
        "      <td>2708</td>\n",
        "      <td>3008</td>\n",
        "      <td>Chas.</td>\n",
@@ -3251,8 +3245,11 @@
        "                                           house_rules  \\\n",
        "2.0  I just have one rule. The Golden Rule Do unto ...   \n",
        "\n",
-       "                                            host_about    id host_id host_name  \n",
-       "2.0  Writer.\\r\\nLiterary Manager.\\r\\nPhotographer.\\...  2708    3008     Chas.  "
+       "                                            host_about  isPlus    id host_id  \\\n",
+       "2.0  Writer.\\r\\nLiterary Manager.\\r\\nPhotographer.\\...       0  2708    3008   \n",
+       "\n",
+       "    host_name  \n",
+       "2.0     Chas.  "
       ]
      },
      "execution_count": 18,
@@ -3266,7 +3263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
